option to add SystemNeed is working.
TODO
need to create the function for create schdule button. need to make
Model adapter, model solver, and model retriver + notifcation stright to Employees.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
         <item>Wednesday</item>
         <item>Thursday</item>
         <item>Friday</item>
+        <item>Saturday</item>
     </string-array>
 </resources>
