--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="back"><![CDATA[<-]]></string>
     <string name="next"><![CDATA[->]]></string>
+    <string name="pinned">the value has been pinned by the admins\n</string>
 
     <string-array name="days_of_week">
         <item>Sunday</item>
